Fix rows and buttons. Add important to spacing.

--- a/Src/Web/App/src/wwwroot/scss/_input.scss
+++ b/Src/Web/App/src/wwwroot/scss/_input.scss
@@ -62,8 +62,6 @@ button {
 }
 
 .checkbox {
-    display: flex;
-    align-items: flex-end;
     padding: 5px 10px;
 
     input[type="checkbox"] {
@@ -77,7 +75,6 @@ button {
         user-select: none;
         cursor: pointer;
     }
-
 }
 
 select {
