--- a/Src/Web/App/src/wwwroot/scss/layouts/_list-view.scss
+++ b/Src/Web/App/src/wwwroot/scss/layouts/_list-view.scss
@@ -20,6 +20,11 @@
         >.category {
             margin-bottom: 15px;
         }
+
+        .checkbox {
+            display: flex;
+            align-items: flex-end;
+        }
     }
 
     .list {
