--- a/Src/Web/App/src/wwwroot/scss/mixins/_spacing.scss
+++ b/Src/Web/App/src/wwwroot/scss/mixins/_spacing.scss
@@ -1,81 +1,81 @@
 @mixin margin {
     @for $i from 0 through 10 {
         &-#{$i * 5} {
-            margin: #{$i * 5}px;
+            margin: #{$i * 5}px !important;
         }
     }
 
     &-auto {
-        margin: auto;
+        margin: auto !important;
     }
 
     &t {
         @for $i from 0 through 10 {
             &-#{$i * 5} {
-                margin-top: #{$i * 5}px;
+                margin-top: #{$i * 5}px !important;
             }
         }
 
         &-auto {
-            margin-top: auto;
+            margin-top: auto !important;
         }
     }
 
     &b {
         @for $i from 0 through 10 {
             &-#{$i * 5} {
-                margin-bottom: #{$i * 5}px;
+                margin-bottom: #{$i * 5}px !important;
             }
         }
 
         &-auto {
-            margin-bottom: auto;
+            margin-bottom: auto !important;
         }
     }
 
     &l {
         @for $i from 0 through 10 {
             &-#{$i * 5} {
-                margin-left: #{$i * 5}px;
+                margin-left: #{$i * 5}px !important;
             }
         }
 
         &-auto {
-            margin-left: auto;
+            margin-left: auto !important;
         }
     }
 
     &r {
         @for $i from 0 through 10 {
             &-#{$i * 5} {
-                margin-right: #{$i * 5}px;
+                margin-right: #{$i * 5}px !important;
             }
         }
 
         &-auto {
-            margin-right: auto;
+            margin-right: auto !important;
         }
     }
 
     &x {
         @for $i from 0 through 10 {
             &-#{$i * 5} {
-                margin-left: #{$i * 5}px;
-                margin-right: #{$i * 5}px;
+                margin-left: #{$i * 5}px !important;
+                margin-right: #{$i * 5}px !important;
             }
         }
 
         &-auto {
-            margin-left: auto;
-            margin-right: auto;
+            margin-left: auto !important;
+            margin-right: auto !important;
         }
     }
 
     &y {
         @for $i from 0 through 10 {
             &-#{$i * 5} {
-                margin-top: #{$i * 5}px;
-                margin-bottom: #{$i * 5}px;
+                margin-top: #{$i * 5}px !important;
+                margin-bottom: #{$i * 5}px !important;
             }
         }
     }
@@ -84,14 +84,14 @@
 @mixin padding {
     @for $i from 1 through 10 {
         &-#{$i * 5} {
-            padding: #{$i * 5}px;
+            padding: #{$i * 5}px !important;
         }
     }
 
     &t {
         @for $i from 1 through 10 {
             &-#{$i * 5} {
-                padding-top: #{$i * 5}px;
+                padding-top: #{$i * 5}px !important;
             }
         }
     }
@@ -99,7 +99,7 @@
     &b {
         @for $i from 1 through 10 {
             &-#{$i * 5} {
-                padding-bottom: #{$i * 5}px;
+                padding-bottom: #{$i * 5}px !important;
             }
         }
     }
@@ -107,7 +107,7 @@
     &l {
         @for $i from 1 through 10 {
             &-#{$i * 5} {
-                padding-left: #{$i * 5}px;
+                padding-left: #{$i * 5}px !important;
             }
         }
     }
@@ -115,7 +115,7 @@
     &r {
         @for $i from 1 through 10 {
             &-#{$i * 5} {
-                padding-right: #{$i * 5}px;
+                padding-right: #{$i * 5}px !important;
             }
         }
     }
@@ -123,8 +123,8 @@
     &x {
         @for $i from 1 through 10 {
             &-#{$i * 5} {
-                padding-left: #{$i * 5}px;
-                padding-right: #{$i * 5}px;
+                padding-left: #{$i * 5}px !important;
+                padding-right: #{$i * 5}px !important;
             }
         }
     }
@@ -132,8 +132,8 @@
     &y {
         @for $i from 1 through 10 {
             &-#{$i * 5} {
-                padding-top: #{$i * 5}px;
-                padding-bottom: #{$i * 5}px;
+                padding-top: #{$i * 5}px !important;
+                padding-bottom: #{$i * 5}px !important;
             }
         }
     }
